fix leaderboard overflow

--- a/frontend/src/components/leaderboard/leaderstyle.scss
+++ b/frontend/src/components/leaderboard/leaderstyle.scss
@@ -124,4 +124,6 @@
   height: 100%;
   display: flex;
   align-items: center;
+  position: relative;
+  top: 3em;
 }
